[package]
name = "kaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kaya"
path = "src/server/main.rs"

[[bin]]
name = "kaya-cli"
path = "src/client/main.rs"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
postcard = { version = "1.0.4", features = ["alloc"]}
serde = "1.0.130"
clap = { version = "4.3.0", features = ["derive"] }
